--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vite-ssg": "^0.21.2",
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.24.4",
+    "vue-tippy": "6.0.0-alpha.65",
     "vue-tsc": "^1.0.9"
   }
 }
