--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.29.2",
     "@iconify-json/carbon": "^1.1.9",
+    "@iconify/json": "^2.1.134",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
