--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.6.1",
+    "netlify-cli": "^12.5.0",
     "pnpm": "^7.14.1",
     "shiki": "^0.11.1",
     "taze": "^0.8.3",
