--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unocss/reset": "^0.46.2",
     "@vueuse/core": "^9.4.0",
     "@vueuse/head": "^0.9.8",
+    "dayjs": "^1.11.7",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
