--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.7",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
+    "unocss-preset-extra": "^0.4.3",
     "vue": "^3.2.41",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
